Version 5.1.8
  - Defaulting max allowed packet to 1024 to account for the possible case where the
    value doesn't come in as a server variable   

Version 5.1.7 - 8/20/08
 - Fixed problem with DDEX provider that could sometimes prevent table altering when working with
   4.1 servers (bug #30603)
 - Fixed problem with pooling code where connections pooled from the pool were added
   twice to the in use pool.  This would cause a semaphore full exception
   when an attempt is made to release them back to the pool (bug #36688)
 - Reversed order of Datetime and DateTime enums for MySqlDbType so that VB users won't get
   autocorrection to Datetime (bug #37406)
 - Uncommented access denied error enumeration value (bug #37398)
 - Improved documentation concerning autoincrement columns and the DataColumn class (bug #37350)
 - Fixed problem where executing a command that results in a fatal exception would not
   close the connection.  (bug #37991)
 - Fixed problem where executing a command with a null connection object would result in
   a null reference exception instead of an InvalidOp (bug #38276)
 
Version 5.1.6 - 5/7/08
 - Fixed problem where parameters lists were not showing when you tried to alter a routine 
   in server explorer.  (bug #34359)
 - Fixed a problem in procedure cache where it was possible to get into a race condition
   and cause a memory leak (bug #34338)
 - Fixed problem where attempting to use an isolation level other than the default with
   a transaction scope would use the default instead (bug #34448)
 - Fixed problem that causes the TableAdapter wizard to only generate insert statements.
   The problem was that our code to retrieve index columns was broken. (bug #31338)
 - Fixed problem with connections staying open after being used with SqlDataSource.
   The problem was that we were not returning an enumerator for our reader with the
   closeReader option set to true when we were supposed to.  (Bug #34460)