@@ -1,6 +1,8 @@
 Version 5.1.8
   - Defaulting max allowed packet to 1024 to account for the possible case where the
     value doesn't come in as a server variable   
+  - implemented Disposable pattern on MySqlTransaction class so including one in a using statement
+    and then not calling commit will cause a rollback when the using exits (bug #39817)
 
 Version 5.1.7 - 8/20/08
  - Fixed problem with DDEX provider that could sometimes prevent table altering when working with
